<resources>
    <string name="app_name">Trabalho03-2018-1</string>
    <string name="tnome">Nome:</string>
    <string name="trua">Rua:</string>
    <string name="tfuncao">Função:</string>
    <string name="tbairro">Bairro:</string>
    <string name="buttonbuscar">Buscar</string>
    <string name="tmunicipio">Município</string>

    <string name="tlatitude">Latitude</string>
    <string name="tlongitude">Longitude</string>
    <string name="buttonadd">Adicionar</string>
    <string name="buttonalterar">Alterar</string>
    <string name="buttondelete">Excluir</string>
    <string name="title_activity_lista_oficina">Lista de Oficinas</string>
    <string name="title_activity_oficina_detalhe">Cadastro de Oficina</string>
    <string name="title_activity_lista_mecanico">Lista de Mecanicos</string>
    <string name="title_activity_mecanico_detalhe">Cadastro de Mecanico</string>

    <string name="tdata">Data:</string>
</resources>
