<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MecanicoDetalhe">

    <android.support.v7.widget.GridLayout
        android:id="@+id/gridLayout2"
        android:layout_width="380dp"
        android:layout_height="417dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvNome"
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:text="@string/tnome"
            app:layout_column="0"
            app:layout_row="0" />

        <EditText
            android:id="@+id/etNome"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_column="1"
            app:layout_row="0" />

        <TextView
            android:id="@+id/tvfuncao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tfuncao"
            app:layout_column="0"
            app:layout_row="1" />

        <EditText
            android:id="@+id/etFuncao"
            android:layout_width="291dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_column="1"
            app:layout_row="1" />

        <TextView
            android:id="@+id/tvData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tdata"
            app:layout_column="0"
            app:layout_row="2" />

        <TextView
            android:id="@+id/tvRua"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trua"
            app:layout_column="0"
            app:layout_row="3" />

        <EditText
            android:id="@+id/etRua"
            android:layout_width="293dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_column="1"
            app:layout_row="3" />

        <Button
            android:id="@+id/btBuscar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonbuscar"
            app:layout_column="0"
            app:layout_row="4" />

        <TextView
            android:id="@+id/tvBairro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tbairro"
            app:layout_column="0"
            app:layout_row="5" />

        <EditText
            android:id="@+id/etBairro"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_column="1"
            app:layout_row="5" />

        <TextView
            android:id="@+id/tvMunicipio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tmunicipio"
            app:layout_column="0"
            app:layout_row="6" />

        <EditText
            android:id="@+id/etMunicipio"
            android:layout_width="292dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_column="1"
            app:layout_row="6" />

        <TextView
            android:id="@+id/tvLatitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tlatitude"
            app:layout_column="0"
            app:layout_row="7" />

        <TextView
            android:id="@+id/tvLongitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tlongitude"
            app:layout_column="0"
            app:layout_row="8" />

        <EditText
            android:id="@+id/etLatitude"
            android:layout_width="292dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_column="1"
            app:layout_row="7" />

        <EditText
            android:id="@+id/etLongitude"
            android:layout_width="294dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_column="1"
            app:layout_row="8" />

        <EditText
            android:id="@+id/etData"
            android:layout_width="293dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            app:layout_column="1"
            app:layout_row="2" />

    </android.support.v7.widget.GridLayout>

    <Button
        android:id="@+id/btAdicionar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/buttonadd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btAlterar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="84dp"
        android:text="@string/buttonalterar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btAdicionar" />

    <Button
        android:id="@+id/btExcluir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/buttondelete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.806"
        app:layout_constraintStart_toEndOf="@+id/btAlterar" />
</android.support.constraint.ConstraintLayout>