<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.OficinaDetalhe">

    <android.support.v7.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="357dp"
        android:layout_height="307dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tNome"
            android:layout_width="81dp"
            android:layout_height="wrap_content"
            android:text="@string/tnome" />

        <EditText
            android:id="@+id/edtNome"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_column="1"
            app:layout_row="0" />

        <TextView
            android:id="@+id/tRua"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trua"
            app:layout_column="0"
            app:layout_row="1" />

        <EditText
            android:id="@+id/edtRua"
            android:layout_width="273dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_column="1"
            app:layout_row="1" />

        <Button
            android:id="@+id/btnBuscar"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:text="@string/buttonbuscar"
            app:layout_column="0"
            app:layout_row="2" />

        <TextView
            android:id="@+id/tMunicipio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tmunicipio"
            app:layout_column="0"
            app:layout_row="4" />

        <EditText
            android:id="@+id/edtMunicipio"
            android:layout_width="272dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_column="1"
            app:layout_row="4" />

        <TextView
            android:id="@+id/tlatitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tlatitude"
            android:inputType="textPersonName"
            app:layout_column="0"
            app:layout_row="5" />

        <TextView
            android:id="@+id/tlongitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tlongitude"
            android:inputType="textPersonName"
            app:layout_column="0"
            app:layout_row="6" />

        <TextView
            android:id="@+id/tBairro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tbairro"
            app:layout_column="0"
            app:layout_row="3" />

        <EditText
            android:id="@+id/edtBairro"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_column="1"
            app:layout_row="3" />

        <EditText
            android:id="@+id/edtLatitude"
            android:layout_width="267dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_column="1"
            app:layout_row="5" />

        <EditText
            android:id="@+id/edtLongitude"
            android:layout_width="268dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_column="1"
            app:layout_row="6" />

    </android.support.v7.widget.GridLayout>

    <Button
        android:id="@+id/bexcluir"
        android:layout_width="100dp"
        android:layout_height="38dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/buttondelete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/balterar"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/badicionar"
        android:layout_width="100dp"
        android:layout_height="37dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="76dp"
        android:text="@string/buttonadd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

    <Button
        android:id="@+id/balterar"
        android:layout_width="99dp"
        android:layout_height="38dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/buttonalterar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/badicionar" />

</android.support.constraint.ConstraintLayout>